# rr-audio

./: .gitignore  LICENSE  README.md
tyrone/: .tmux.conf  audio_data.py  models.py  pyproject.toml  requirements.txt  send.sh  server.py  setup.sh  ssh.sh  train_model.py  utils.py  whisper.ipynb
tyrone-demo/: index.html  package.json
tyrone-demo/public/: pcm-processor.js
tyrone-demo/src/: App.css  App.tsx  index.css
